Feat/user app settings (#46)
* why are we sending the token on the test ?

* userAppSetings for shared settings by integration

* don't run the tests twice

* better description of a test

* return an empty setting instead of a 404
